== 0.12.3

* Security Fix
  * Updated Rails to 3.2.10

== 0.12.2

* Enhancements
  * Gem updates including Rails 3.2.9 and Ruby 1.9.3-p327
  * File types now allow simple HTML formatting
  * Updated to Contour 1.1.1 and replaced inline JavaScript with Unobtrusive JavaScript
  * Search boxes for data sources and data concepts now use Select2 JavaScript plugin

* Bug Fix
  * Create New Rule button from the Source Rules index now correctly directs the user to the New Rule page for the selected data source

== 0.12.1

* Bug Fix
  * Fixed a bug that prevented dictionary CSV files from being added to a dictionary
  * Fixed a bug that prevented users from being granted access to data source rules

== 0.12.0

* Enhancements
  * Major GUI update using Twitter Bootstrap
  * Updated to Rails 3.2.8 and Contour 1.0.5
  * Updated Devise configuration files for devise 2.1.0
  * Links with confirm: now use data: { confirm: } to account for deprecations in Rails 4.0
  * Removed deprecated use of update_attribute for Rails 4.0 compatibility
  * About page reformatted to include links to github and contact information

* Refactoring
  * Consistent sorting of all objects, (queries, dictionaries, sources, concepts, etc)

* Testing
  * Use ActionDispatch for Integration tests instead of ActionController

== 0.11.9

* Enhancements
  * Cleaning up and preparations for upcoming 0.12.0 release
  * Email Changes:
    * Default application name is now added to the from: field for emails
    * Email subjects no longer include the application name

== 0.11.8

* Enhancements
  * Allows service accounts to create activated users with a JSON web service request
  * Updated to Rails 3.2.3

== 0.11.7

* Bug Fix
  * Non-breaking spaces no longer appear when indenting and grouping search concepts

== 0.11.6

* Enhancements
  * Updated to Rails 3.2.2 and Contour 0.10.2 and Ruby 1.9.3-p125
  * Minor GUI fix for report configuration table when reports are very wide

* Bug Fix